overflow scroll added prevents navbar shift

--- a/resources/styles/default.css
+++ b/resources/styles/default.css
@@ -5,4 +5,5 @@ body {
     background: fixed;
     background-image: linear-gradient(rgba(241, 191, 133, 0.2), rgba(241, 191, 133, 0.2)),url(../images/bg.png);
     background-size: cover;
+    overflow: scroll;
 }
